# nomoselect

./: .gitignore  LICENSE  README.md  citations.cff  pyproject.toml
case_studies/: case_study_results.json  case_study_summary.txt  run_all.py
src/nomoselect/: __init__.py  audit.py  ladder.py  report.py  selector.py  tasks.py
tests/: conftest.py  test_audit.py  test_ladder.py  test_misuse.py  test_report.py  test_selector.py  test_tasks.py
