[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomoselect"
version = "0.2.0"
description = "Task-aware subspace selection with exact diagnostics. Built on nomogeo."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{name = "J. R. Dunkley"}]
dependencies = [
    "nomogeo>=0.4.0",
    "numpy>=1.24",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
